--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html,
 body,
 * {
+  background-color: adb5bd;
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
@@ -8,8 +9,31 @@ body,
 }
 .parent {
   font-size: 30px;
+  justify-content: space-around;
   display: flex;
-  align-items: center;
+  flex-direction: row;
 }
 .child {
+  width: 26%;
+  margin-top: 75px;
+  margin-left: 4 rem;
+  margin-right: 4 rem;
+  text-align: center;
+  font-size: 50px;
+}
+#child-1 {
+  border: 10px solid black;
+  border-radius: 10px;
+  height: 500px;
+  padding-top: 30px;
+}
+#child-2 {
+  border: 10px solid black;
+  border-radius: 10px;
+  padding-top: 30px;
+}
+#child-3 {
+  border: 10px solid black;
+  border-radius: 10px;
+  padding-top: 30px;
 }
