--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html,
 body,
 * {
-  background-color: adb5bd;
+  background-color: f4f1de;
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
@@ -13,27 +13,20 @@ body,
   display: flex;
   flex-direction: row;
 }
+h2 {
+  background-color: f2cc8f;
+  color: rgb(2, 84, 109);
+}
 .child {
+  background-color: f2cc8f;
   width: 26%;
-  margin-top: 75px;
+  margin-top: 6rem;
   margin-left: 4 rem;
   margin-right: 4 rem;
   text-align: center;
-  font-size: 50px;
-}
-#child-1 {
-  border: 10px solid black;
-  border-radius: 10px;
-  height: 500px;
-  padding-top: 30px;
-}
-#child-2 {
-  border: 10px solid black;
-  border-radius: 10px;
-  padding-top: 30px;
-}
-#child-3 {
-  border: 10px solid black;
-  border-radius: 10px;
+  font-size: 5.5rem;
+  border: 2rem solid rgb(0, 87, 114);
+  border-radius: 15px;
+  height: 50rem;
   padding-top: 30px;
 }
