--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ h2 {
   background-color: f2cc8f;
   color: rgb(2, 84, 109);
 }
+p {
+  margin-top: 2rem;
+  font-size: 2.5rem;
+  background-color: f2cc8f;
+  color: rgb(2, 84, 109);
+}
 .child {
   background-color: f2cc8f;
   width: 26%;
