--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@ body,
   display: flex;
   flex-direction: row;
 }
+h1 {
+  font-size: 7rem;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(2, 84, 109);
+  margin-top: 2rem;
+  text-align: center;
+}
 h2 {
   font-family: "Montserrat", sans-serif;
   background-color: f2cc8f;
@@ -20,7 +27,7 @@ h2 {
 }
 p {
   font-family: "Montserrat", sans-serif;
-  margin-top: 2rem;
+  margin-top: 29rem;
   font-size: 2.5rem;
   background-color: f2cc8f;
   color: rgb(2, 84, 109);
@@ -37,10 +44,35 @@ p {
   border-radius: 15px;
   height: 50rem;
   padding-top: 30px;
-  box-shadow: 1rem 1rem 5rem rgb(148, 1, 141);
+  box-shadow: 1rem 1rem 5rem rgb(0, 62, 98);
+  background-repeat: no-repeat;
+  background-size: 300px 225px;
+  background-position: center;
 }
 #child-1 {
   background-image: url(img/cucumbers.jpg);
-  background-repeat: no-repeat;
-  background-size: ;
+}
+#child-2 {
+  background-image: url(img/EBF_BroccoliFloretsBag-020-2-960x960.png);
+}
+#child-3 {
+  background-image: url(img/taro.jfif);
+}
+#child-4 {
+  background-image: url(img/lettuce.jpg);
+}
+#child-5 {
+  background-image: url(img/tomato.jpg);
+}
+#child-6 {
+  background-image: url(img/onions.jpg);
+}
+#child-7 {
+  background-image: url(img/cabbage.jfif);
+}
+#child-8 {
+  background-image: url(img/potato.jfif);
+}
+#child-9 {
+  background-image: url(img/celery.jpg);
 }
