--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 html,
 body,
 * {
-  background-color: f4f1de;
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
   font-size: 62.5%;
+}
+body {
+  background-color: f4f1de;
 }
 .parent {
   font-size: 30px;
