--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,13 @@ body,
   box-sizing: border-box;
   font-size: 62.5%;
 }
-body {
-  background-color: f4f1de;
-}
 .parent {
-  font-size: 30px;
-  justify-content: space-around;
+  background-color: f4f1de;
+  justify-content: space-evenly;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6rem;
 }
 h1 {
   font-size: 7rem;
@@ -21,6 +20,7 @@ h1 {
   color: rgb(2, 84, 109);
   margin-top: 2rem;
   text-align: center;
+  background-color: f4f1de;
 }
 h2 {
   font-family: "Montserrat", sans-serif;
@@ -29,7 +29,7 @@ h2 {
 }
 p {
   font-family: "Montserrat", sans-serif;
-  margin-top: 29rem;
+  margin-top: 28rem;
   font-size: 2.5rem;
   background-color: f2cc8f;
   color: rgb(2, 84, 109);
@@ -38,14 +38,12 @@ p {
   background-color: f2cc8f;
   width: 26%;
   margin-top: 6rem;
-  margin-left: 4 rem;
-  margin-right: 4 rem;
   text-align: center;
   font-size: 5.5rem;
   border: 2rem solid rgb(0, 87, 114);
-  border-radius: 15px;
+  border-radius: 1.5rem;
   height: 50rem;
-  padding-top: 30px;
+  padding-top: 3rem;
   box-shadow: 1rem 1rem 5rem rgb(0, 62, 98);
   background-repeat: no-repeat;
   background-size: 300px 225px;
@@ -55,7 +53,7 @@ p {
   background-image: url(img/cucumbers.jpg);
 }
 #child-2 {
-  background-image: url(img/EBF_BroccoliFloretsBag-020-2-960x960.png);
+  background-image: url(img/broccoli.png);
 }
 #child-3 {
   background-image: url(img/taro.jfif);
