--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,17 @@ body,
   box-sizing: border-box;
   font-size: 62.5%;
   gap: 4rem;
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .gallery {
   background-color: f4f1de;
