--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,11 @@ body,
     opacity: 1;
   }
 }
-@media screen and (max-width: 1080px) {
+@media all and (max-width: 1080px) {
   .gallery {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 }
 .gallery {
