--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,14 @@ body,
     opacity: 1;
   }
 }
-@media all and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
   .gallery {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .box {
+    width: 95%;
   }
 }
 .gallery {
