--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,6 @@ body,
     opacity: 1;
   }
 }
-@media screen and (max-width: 1080px) {
-  .gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .box {
-    width: 95%;
-  }
-}
 .gallery {
   background-color: f4f1de;
   justify-content: space-evenly;
@@ -38,8 +28,24 @@ body,
   flex-wrap: wrap;
   gap: 6rem;
 }
+.box {
+  background-color: f2cc8f;
+  width: 26%;
+  margin-top: 6rem;
+  text-align: center;
+  font-size: 5.5rem;
+  border: 2rem solid rgb(0, 87, 114);
+  border-radius: 1.5rem;
+  height: 50rem;
+  padding-top: 3rem;
+  box-shadow: 1rem 1rem 5rem rgb(0, 62, 98);
+  background-repeat: no-repeat;
+  background-size: 30rem 22.5rem;
+  background-position: center;
+  transition: all 0.2s;
+}
+
 h1 {
-  display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
@@ -65,23 +71,24 @@ p {
   background-color: f2cc8f;
   color: rgb(2, 84, 109);
 }
-.box {
-  background-color: f2cc8f;
-  width: 26%;
-  margin-top: 6rem;
-  text-align: center;
-  font-size: 5.5rem;
-  border: 2rem solid rgb(0, 87, 114);
-  border-radius: 1.5rem;
-  height: 50rem;
-  padding-top: 3rem;
-  box-shadow: 1rem 1rem 5rem rgb(0, 62, 98);
-  background-repeat: no-repeat;
-  background-size: 30rem 22.5rem;
-  background-position: center;
-  transition: all 0.2s;
+@media screen and (max-width: 1080px) {
+  #h1 {
+    align-items: center;
+    font-size: 1rem;
+    border: 0.7rem solid rgb(0, 87, 114);
+  }
+  .box {
+    width: 90%;
+    height: 30%;
+    font-size: 5.5rem;
+  }
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
 }
-
 #box-1 {
   background-image: url(img/cucumbers.jpg);
 }
